# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express, or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/ability/form_fwk/form_fwk.gni")

##############################fuzztest##########################################
ohos_fuzztest("FormProviderRefreshImplFuzzTest") {
  module_out_path = form_fuzz_test_path

  fuzz_config_file = "${form_fwk_path}/test/fuzztest/formproviderrefreshimpl_fuzzer"

  include_dirs = [
    "${form_fwk_path}/interfaces/kits/native/include",
    "${form_fwk_path}/services/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "${form_fwk_path}/services/src/common/util/form_trust_mgr.cpp",
    "${form_fwk_path}/services/src/data_center/form_record/form_record_report.cpp",
    "${form_fwk_path}/services/src/feature/param_update/param_control.cpp",
    "${form_fwk_path}/services/src/form_refresh/check_mgr/active_user_checker.cpp",
    "${form_fwk_path}/services/src/form_refresh/check_mgr/add_finish_checker.cpp",
    "${form_fwk_path}/services/src/form_refresh/check_mgr/system_app_checker.cpp",
    "${form_fwk_path}/services/src/form_refresh/check_mgr/self_form_checker.cpp",
    "${form_fwk_path}/services/src/form_refresh/check_mgr/calling_user_checker.cpp",
    "${form_fwk_path}/services/src/form_refresh/check_mgr/calling_bundle_checker.cpp",
    "${form_fwk_path}/services/src/form_refresh/check_mgr/untrust_app_checker.cpp",
    "${form_fwk_path}/services/src/form_refresh/check_mgr/multi_active_users_checker.cpp",
    "${form_fwk_path}/services/src/form_refresh/refresh_impl/form_provider_refresh_impl.cpp",
    "${form_fwk_path}/services/src/form_refresh/refresh_impl/base_form_refresh.cpp",
    "${form_fwk_path}/services/src/form_refresh/strategy/refresh_cache_mgr.cpp",
    "${form_fwk_path}/services/src/form_refresh/strategy/refresh_check_mgr.cpp",
    "${form_fwk_path}/services/src/form_refresh/strategy/refresh_control_mgr.cpp",
    "${form_fwk_path}/services/src/form_refresh/strategy/refresh_exec_mgr.cpp",
    "formproviderrefreshimpl_fuzzer.cpp"
  ]

  deps = [
    "${form_fwk_path}:form_manager",
    "${form_fwk_path}:fms_target",
    "${form_fwk_path}:fmskit_native",
    "${form_fwk_path}:form_render_info",
    "${form_fwk_path}:form_utils",
    "${form_fwk_path}:form_common_info",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_manager",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "ffrt:libffrt",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "libxml2:libxml2",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":FormProviderRefreshImplFuzzTest",
  ]
}
###############################################################################
