# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/ability/form_fwk/form_fwk.gni")
module_output_path = "form_fwk/formmgr"

##############################fuzztest##########################################
ohos_fuzztest("GetErrorMsgFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file = "${form_fwk_path}/test/fuzztest/geterrormsg_fuzzer"

  include_dirs = [ "${form_fwk_path}/services/include" ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "geterrormsg_fuzzer.cpp" ]

  configs = [ "${ability_runtime_path}/interfaces/inner_api/ability_manager:ability_manager_public_config" ]

  deps = [
    "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
    "${ability_runtime_path}/interfaces/inner_api/app_manager:app_manager",
    "${form_fwk_path}:fms_target",
    "${form_fwk_path}:fmskit_native",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":GetErrorMsgFuzzTest",
  ]
}
###############################################################################
