# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/ability/form_fwk/form_fwk.gni")

module_output_path = "form_fwk/form_fwk/form_mgr_service"

ohos_unittest("FmsFormAbilityConnectionTest") {
  module_out_path = module_output_path

  sources = [
    "${form_fwk_path}/services/src/common/connection/form_ability_connection.cpp",
    "${form_fwk_path}/services/src/common/util/form_report.cpp",
    "${form_fwk_path}/services/common/src/util/form_time_util.cpp",
    "${form_fwk_path}/test/unittest/fms_form_ability_connection_test/fms_form_ability_connection_test.cpp",
    "${form_fwk_path}/test/mock/src/mock_form_data_mgr.cpp",
    "${form_fwk_path}/test/mock/src/mock_form_mgr_adapter_facade.cpp",
    "${form_fwk_path}/test/mock/src/mock_form_render_mgr.cpp",
  ]

  include_dirs = [
    "${form_fwk_path}/interfaces/inner_api/include",
    "${form_fwk_path}/services/include",
    "${form_fwk_path}/services/include/common/connection",
    "${form_fwk_path}/services/include/data_center",
    "${form_fwk_path}/services/include/data_center/database",
    "${form_fwk_path}/services/include/data_center/form_info",
    "${form_fwk_path}/services/include/form_provider",
    "${form_fwk_path}/services/include/common/timer_mgr",
    "${form_fwk_path}/services/include/common/util",
    "${form_fwk_path}/services/common/include",
    "${form_fwk_path}/test/mock/include",
    "${form_fwk_path}/test/unittest/form_mgr_test",
  ]

  configs = []
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${form_fwk_path}:fms_target",
    "${form_fwk_path}:fmskit_native",
    "${form_fwk_path}:libfms",
    "${form_fwk_path}:form_render_info",
    "${form_fwk_path}:form_utils",
    "${form_fwk_path}:form_common_info",
  ]

  external_deps = [
    "ability_runtime:app_manager",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "ffrt:libffrt",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "huks:libhukssdk",
    "ipc:ipc_core",
    "libxml2:libxml2",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "googletest:gmock_main",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_no_nvcall = true
    cfi_vcall_icall_only = true
    debug = false
  }
}

###############################################################################
group("unittest") {
  testonly = true

  deps = [ ":FmsFormAbilityConnectionTest" ]
}
###############################################################################