# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/ability/form_fwk/form_fwk.gni")

module_output_path = "form_fwk/form_fwk/form_mgr_service"

ohos_unittest("FmsFormAmsHelperTest") {
  module_out_path = module_output_path

  sources = [
    "${form_fwk_path}/test/unittest/fms_form_ams_helper_test/fms_form_ams_helper_test.cpp",
    "${form_fwk_path}/test/unittest/fms_form_ams_helper_test/mock_fms_form_ams_helper.cpp",
    "${form_fwk_path}/test/mock/src/mock_form_provider_client.cpp",
  ]

  include_dirs = [
    "${form_fwk_path}/interfaces/inner_api/include",
    "${form_fwk_path}/services/include",
  ]

  configs = [
    "${form_fwk_path}/test:formmgr_test_config",
  ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  deps = [
    "${form_fwk_path}:libfms",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_manager",
    "c_utils:utils",
    "ffrt:libffrt",
    "form_fwk:form_manager",
    "googletest:gmock_main",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

###############################################################################
group("unittest") {
  testonly = true

  deps = [ ":FmsFormAmsHelperTest" ]
}
###############################################################################
